Replace banner by a more suitable one

--- a/octodeco/flaskr/templates/base.html
+++ b/octodeco/flaskr/templates/base.html
@@ -137,8 +137,10 @@
 			<div id="copyright">
 				<div class="container">
 					<p>Octo-Deco is <a href="https://github.com/danroozemond/octo-deco" target="_blank">open source</a> (LPGLv3).</p>
-					<p>Site design: Synchronous by <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)</p>
-					<p>Favicon by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
+					<p>Site design: Synchronous by <a href="http://templated.co">TEMPLATED</a>
+						&nbsp;|&nbsp; Banner by <a href="https://unsplash.com/@simebasioli?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Sime Basioli</a> from <a href="https://unsplash.com/">Unsplash</a>
+						&nbsp;|&nbsp; Favicon by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+					</p>
 				</div>
 			</div>
 			
