W3 validator: img alt text

--- a/octodeco/flaskr/templates/dive/elt_login_please.html
+++ b/octodeco/flaskr/templates/dive/elt_login_please.html
@@ -1,4 +1,4 @@
 Please log in to use this feature, it's computationally expensive.<br/>
 <a href="{{ g.user_details.login_link }}">
-    <img class="google_signin" src="{{ url_for('static', filename='images/google_signin.png') }}">
+    <img class="google_signin" src="{{ url_for('static', filename='images/google_signin.png') }}" alt="google sign in">
 </a>
