--- a/octodeco/flaskr/templates/base.html
+++ b/octodeco/flaskr/templates/base.html
@@ -42,12 +42,12 @@
 					<!-- Login box -->
 					<div class="login_info">
 						{% if g.user_details.is_logged_in() %}
-						<img class="profile_pic" src="{{ g.user_details['google_picture'] }}">
+						<img class="profile_pic" src="{{ g.user_details['google_picture'] }}" alt="google profile pic">
 						<div class="given_name">{{ g.user_details['google_given_name'] }}</div>
 						<a href="{{ g.user_details.logout_link }}">logout</a>
 						{% else %}
 						<a href="{{ g.user_details.login_link }}">
-							<img class="google_signin" src="{{ url_for('static', filename='images/google_signin.png') }}">
+							<img class="google_signin" src="{{ url_for('static', filename='images/google_signin.png') }}" alt="google sign in">
 						</a>
 						{% endif %}
 					</div>
