Cleaner title in dive/show

--- a/octodeco/flaskr/templates/dive/show.html
+++ b/octodeco/flaskr/templates/dive/show.html
@@ -5,7 +5,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
 {% endblock %}
 
-{% block title %}Dive - {{dive.description()}}{% endblock %}
+{% block title %}{{dive.description()}}{% endblock %}
 
 {% block sidebarheader %}
     <div class="diveselect">
